# breadxim

./: Cargo.toml  Justfile  README.md  i18nIMProto.c  xim_protocol.toml
breadxim/: Cargo.toml
xim-generator/: Cargo.toml
xim-generator/src/: main.rs
xim-protocol/: Cargo.toml
xim-protocol/src/: automatically_generated.rs  connect.rs  frame.rs  lib.rs  message.rs
xim-protocol/src/connection/: builder.rs  mod.rs
