[package]
name = "xim-protocol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.9.1"
serde = { version = "1.0.137", optional = true }
x11rb-protocol = { git = "https://github.com/psychon/x11rb", default-features = false }

[dev-dependencies]
fastrand = "1.7.0"

[features]
default = ["std"]
std = []