[package]
name = "xim-protocol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.9.1", features = ["extern_crate_alloc"] }
serde = { version = "1.0.137", optional = true, default-features = false, features = ["derive"] }
tracing = { version = "0.1.35", default-features = false }
x11rb-protocol = { git = "https://github.com/psychon/x11rb", default-features = false }

[dev-dependencies]
fastrand = "1.7.0"

[features]
default = ["std"]
std = []
